<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="es.eukariotas.giame.ui.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <argument
            android:name="User"
            app:argType="es.eukariotas.giame.persistence.data.model.UserModel" />
        <action
            android:id="@+id/action_FirstFragment_to_ConexionFragment"
            app:destination="@id/ConexionFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="es.eukariotas.giame.game.tresEnRaya.TicTacToeLogic"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ConfigFragment"
        android:name="es.eukariotas.giame.ui.ConfigurationFragment"
        android:label="@string/configuracion"
        tools:layout="@layout/fragment_configuration" >
        <action
            android:id="@+id/action_ConfigFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
    </fragment>
    <fragment android:id="@+id/LoginFragment"
        android:name="es.eukariotas.giame.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >

        <action
            android:id="@+id/action_LoginFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />
    </fragment>

    <fragment
        android:id="@+id/MenuFragment"
        android:name="es.eukariotas.giame.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_MenuFragment_to_InfoFragment"
            app:destination="@id/InfoFragment" />
        <action
            android:id="@+id/action_MenuFragment_to_AboutFragment"
            app:destination="@id/AboutFragment" />
        <action
            android:id="@+id/action_MenuFragment_to_ConfigFragment"
            app:destination="@id/ConfigFragment" />
        <action
            android:id="@+id/action_MenuFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_MenuFragment_to_FirstFragment2"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/AboutFragment"
        android:name="es.eukariotas.giame.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/InfoFragment"
        android:name="es.eukariotas.giame.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/ConexionFragment"
        android:name="es.eukariotas.giame.ConexionFragment"
        android:label="@string/conexion"
        tools:layout="@layout/fragment_conexion" >
        <action
            android:id="@+id/action_ConexionFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_ConexionFragment_to_BuscarPartidaFragment"
            app:destination="@id/BuscarPartidaFragment" />
    </fragment>
    <fragment
        android:id="@+id/BuscarPartidaFragment"
        android:name="es.eukariotas.giame.BuscarPartidaFragment"
        android:label="@string/Buscar_partida"
        tools:layout="@layout/fragment_buscar_partida" >
        <action
            android:id="@+id/action_BuscarPartidaFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="es.eukariotas.giame.RegisterFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_RegisterFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>