<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/NoActionBarTheme"
    tools:context=".ConexionFragment">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/fondoalt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btOnline"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/texturaboton"
        android:text="@string/online"
        android:textColor="#FFECEC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <Button
        android:id="@+id/btCrearPartida"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/texturaboton"
        android:text="@string/CrearPartida"
        android:textColor="#FFECEC"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <Button
        android:id="@+id/btBuscarPartida"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/texturaboton"
        android:text="@string/BuscarPartida"
        android:textColor="#FFECEC"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCrearPartida" />

    <Button
        android:id="@+id/btMaquina"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/texturaboton"
        android:text="@string/Solitario"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLocal" />

    <Button
        android:id="@+id/btLocal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/texturaboton"
        android:text="@string/Local"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btOnline" />

</androidx.constraintlayout.widget.ConstraintLayout>